Ubacena instalacija i radni okviri

--- a/3_Programski_jezik_F#_Todorov_Garibovic_Nedeljkovic_Vicentijevic.tex
+++ b/3_Programski_jezik_F#_Todorov_Garibovic_Nedeljkovic_Vicentijevic.tex
@@ -71,12 +71,12 @@ Dodati na kraju sazetak.}
 
 Dodati na kraju uvod u temu i obavezno izmeniti trenutni radni naslov.
 
-\section{U 2018. godini F$\#$ opisan je u dokumentaciji kao "funkcionalni programski jezik koji se pokrece na .NET platformi" \cite{early_history},ali odakle je on potekao?}
+\section{U 2018. godini F$\#$ opisan je u dokumentaciji kao "funkcionalni programski jezik koji se pokrece na .NET platformi" \cite{early_history}, ali odakle je on potekao?}
 \label{sec:poreklo}
 
-Istorija programskog jezika F$\#$ datira jos od 1970. godine pa sve do danas. U ranim 70-im godinama na Univerzitetu u Edinburgu Robin Milner sa jos nekoliko svojih kolega razvija jezik ML (Meta-Language) baziran na programskom jeziku LISP. Njegova onsnovna namena bila je pragmaticnog karaktera. Osmisljen je da pomogne u dokazivanju LCF (Logical computable functions) \cite{Milner:1972:LCF:891954} teorema. ML jezik je koren svih jezika koji pripadaju familiji strogo tipiziranih funkcionalnih jezika, kao npr: Miranda, Haskell, Standard ML, Ocaml, EdinburghML, ReasonML, PureScript, a medju njima i F$\#$.
+Istorija programskog jezika F\# datira jos od 1970. godine pa sve do danas. U ranim 70-im godinama na Univerzitetu u Edinburgu Robin Milner sa jos nekoliko svojih kolega razvija jezik ML (Meta-Language) baziran na programskom jeziku LISP. Njegova onsnovna namena bila je pragmaticnog karaktera. Osmisljen je da pomogne u dokazivanju LCF (Logical computable functions) \cite{Milner:1972:LCF:891954} teorema. ML jezik je koren svih jezika koji pripadaju familiji strogo tipiziranih funkcionalnih jezika, kao npr: Miranda, Haskell, Standard ML, Ocaml, EdinburghML, ReasonML, PureScript, a medju njima i F\#.
 
-Sve do danas kljucne ideje ove familije jezika ostaju osnova jezika F$\#$ koji se nadogradjivao kasnije iz dana u dan. 
+Sve do danas kljucne ideje ove familije jezika ostaju osnova jezika F\# koji se nadogradjivao kasnije iz dana u dan. 
 
 Tokom 80-ih godina dolazi do velike ekspanzije u kompjuterskoj industriji. Kako su se brzo razvijali softverski alati tako su se takodje pojavljivali novi jezici i programske paradigme. U tom periodu i Microsoft dozivljava veliku ekspanziju kao kompanija koja razvija operativne sisteme i aplikacije. Medjutim, u ovom periodu, a najvise u kasnim 80-im godinama pojavljuje se novi, objektno-orjentisani talas razmisljanja u programiranju koji veoma utice na razvoj softvera.
 
@@ -89,15 +89,15 @@ Tokom 90-ih godina Microsoft razvija .NET \cite{microsoft_.net,early_history} pl
 
 U okviru ovoga Don Sym razija projekat SML.NET koji je za ideju imao preusmeravanje Standard ML-a na .NET. Sistem je imao visok kvalitet, ali nije bio usvojen od strane programera. Pocetkom 2000-ih platforma .NET je vec uveliko zazivela, ali za jezik SML.NET nije bilo veceg interesovanja. Autor je imao veliku zelju da implementira strogo tipiziran funkcionalni jezik na nacin koji bi zainteresovao veliki broj programera. U razmatranje ulazi i jezik OCaml, ali prethodno dolazi do pokusaja implementacije Haskell-a za .NET. Ovaj pokusaj bio je samo delimicno uspesan i primenjen na malim programima. Rad na daljoj implementaciji je zaustavljen.
 
-U decembru 2001. godine Don Syme u razmatranje vraca jezik OCaml u cilju da se implementira za .NET platformu i razvija projekat Caml.NET koji ce se kasnije preimenovati u F$\#$.
+U decembru 2001. godine Don Syme u razmatranje vraca jezik OCaml u cilju da se implementira za .NET platformu i razvija projekat Caml.NET koji ce se kasnije preimenovati u F\#.
 
-Inicijalna ideja F$\#$ programskog jezika bila je jednostavna. Trebalo je da poveze prednosti OCaml programskog jezika sa prednostima .NET platforme. 2002. godine pojavljuje se prva verzija F$\#$ 0.5 koja bila je slabo primecena. Don Syme 2004. godine nastavlja intenzivno da razvija ovaj jezik, a pocetkom 2005. godine izbaciuje prvu potpunu verziju ovog programskog jezika \cite{early_history}.
-Poslednja aktuelna verzija ovog jezika je F$\#$ 4.1 \cite{fsharp}.
+Inicijalna ideja F\# programskog jezika bila je jednostavna. Trebalo je da poveze prednosti OCaml programskog jezika sa prednostima .NET platforme. 2002. godine pojavljuje se prva verzija F\# 0.5 koja bila je slabo primecena. Don Syme 2004. godine nastavlja intenzivno da razvija ovaj jezik, a pocetkom 2005. godine izbaciuje prvu potpunu verziju ovog programskog jezika \cite{early_history}.
+Poslednja aktuelna verzija ovog jezika je F\# 4.1 \cite{fsharp}.
 
 \subsection{Koji programski jezici su najvise uticali na razvoj jezika F$\#$?}
 \label{subsec:uticaj}
 
-Najveci znacaj za razvoj jezika F$\#$ imaju jezici SML (Standard ML) i CAML (Categorical Abstarct Machine Language) porodica jezika koja je razvijana na Nacionalnom institutu za istrazivanje informatike i automatizacije u Francuskoj 1994.godine \cite{Harrop:2008:FS:1481410}. U okviru ovog projekta pod nazivom “Cristal project” razvija se jezik Objective Caml koji ima veoma visoke performanse i naucnici ga koriste na Linux i MAC OS X platformama. Kao sto je vec ranije opisano, ovaj jezik i .NET platforma imali su najveci uticaj na razvoj jezika F$\#$. Na slici \ref{fig:stablo} moze se videti deo razvojnog stabla koji ovo prikazuje.
+Najveci znacaj za razvoj jezika F\# imaju jezici SML (Standard ML) i CAML (Categorical Abstarct Machine Language) porodica jezika koja je razvijana na Nacionalnom institutu za istrazivanje informatike i automatizacije u Francuskoj 1994.godine \cite{Harrop:2008:FS:1481410}. U okviru ovog projekta pod nazivom “Cristal project” razvija se jezik Objective Caml koji ima veoma visoke performanse i naucnici ga koriste na Linux i MAC OS X platformama. Kao sto je vec ranije opisano, ovaj jezik i .NET platforma imali su najveci uticaj na razvoj jezika F\#. Na slici \ref{fig:stablo} moze se videti deo razvojnog stabla koji ovo prikazuje.
 
 \begin{figure}[h!]
 \begin{center}
@@ -111,9 +111,90 @@ Najveci znacaj za razvoj jezika F$\#$ imaju jezici SML (Standard ML) i CAML (Cat
 \section{Primena i mogucnosti}
 \label{sec:primena}
 
-Snaga F$\#$ programskog jezika lezi u svedenoj sintaksi koja omogućava laku čitljivost kôda, kao i efikasan razvoj programa koji zahtevaju primenu složenih matematičkih algoritama. Jezik omogućava brzo generisanje prototipova i njihovu brzu transformaciju u produkcioni kôd. Kôd napisan u F$\#$-u lako se može paralelizovati, što je posebno značajno danas kada svi novi računari imaju više jezgara. F$\#$ danas ima siroku primenu u obradi baza podataka, finansijskog modelovanja, statistici i bioinformatici. Takodje domen primene iz dana u dan raste.
+Snaga F\# programskog jezika lezi u svedenoj sintaksi koja omogućava laku čitljivost kôda, kao i efikasan razvoj programa koji zahtevaju primenu složenih matematičkih algoritama. Jezik omogućava brzo generisanje prototipova i njihovu brzu transformaciju u produkcioni kôd. Kôd napisan u F\#-u lako se može paralelizovati, što je posebno značajno danas kada svi novi računari imaju više jezgara. F\# danas ima siroku primenu u obradi baza podataka, finansijskog modelovanja, statistici i bioinformatici. Takodje domen primene iz dana u dan raste.
 
-F$\#$ je jezik koji ima pretezno funkcionalne karakteristike, ali on je svoju primenu pronasao u jos mnogo vrsta programiranja. Neki od njih su: imperativno, objektno-orjentisano, paralelno, distribuirano, asinhrono, meta programiranje, veb programiranje, skript programiranje, analiticko programiranje, i sl. Danas se on moze koristiti na velikom broju sistema, kao sto su: Linux, MAC, Windows, Android, iOS, i sl. O tome ce biti vise reci u nastavku. 
+F\# je jezik koji ima pretezno funkcionalne karakteristike, ali on je svoju primenu pronasao u jos mnogo vrsta programiranja. Neki od njih su: imperativno, objektno-orjentisano, paralelno, distribuirano, asinhrono, meta programiranje, veb programiranje, skript programiranje, analiticko programiranje, i sl. Danas se on moze koristiti na velikom broju sistema, kao sto su: Linux, MAC, Windows, Android, iOS, i sl. O tome ce biti vise reci u nastavku. 
+
+
+
+\section{Radni okviri}
+
+Najpoznatiji i najznačajniji radni okvir(framework) za ovaj programski jezik je .NET. Ovaj radni okvir je potpuno besplatan i na njemu je moguće kreirati veliki broj različitih aplikacija. On podržava više programskih jezika, programskih paradigmi, editora i biblioteka za igradnju mobilnih i veb aplikacija. 
+\\
+
+Temelj .NET platforme je zajednička jezička infrastruktura CLI (Common Language Infrastructure). Pokretanje F\# koda na ovoj platformi se vrši tako što na samom početku kompajler prevodi kod u binarni fajl koji je preveden na asemblerski jezik višeg nivoa koji se zove MSIL (Microsoft Intermediate Language). Implementacija na CLI kompajleru ovog asemblerskog koda u toku izvršavanja je mnogo brža nego da je kod samo interpretiran i ova kompilacija se izvršava u trenutku\cite{progFs}.
+Kod koji je preveden u MSIL i izvršen u trenutku, predstavlja kod za upravljanje za razliku od kodova pisanih na progamskim jezicima kao što su C ili C++ koji su sirovi kodovi.   
+
+Postoje neke prednosti za prolazak kroz CLI ili upravljani kod a ne direktnog kompiliranja na mašinski nivo:	
+\\
+
+	- kompatibilnost medju jezicima
+	
+	- mogućnost rada na više platformi
+	
+	- mašinska nezavisnost
+\\
+
+
+.NET platforma ima jos jednu prednost a to je prikupljanje smeća sto omogućava programeru da ne razmislja mnogo o alociranju memorije i oslobadjanju, već da se samo skoncentriše na pisanje koda. Iako ne mora da obraća pažnju na smeće i rad sa memorijom poželjno je da programer zna na koji način taj sakupljač smeća radi, kako on oslobadja memoriju i rešava taj problem.
+\\
+
+Naravno da ova platforma nije jedina koja se koristi za ovaj progamski jezik, pored nje postoje: web radni okviri (Suave, Fable, ASP.NET Core, Giraffe, WebSharper, Freya, NancyFx, Serving Requests with IHttpHandler, Serving Requests with Azure, Functions, Pure F\# Web API 2.0, SignalR, ServiceStack, ASP.NET Blazor) i radni okviri za testiranje weba (Web Testing, Frameworks, Canopy for Client-side Testing, Unit Testing Libraries)\cite{fwFs}.
+
+
+
+
+\section{Instalacija}
+
+Uputstvo za instalaciju F\#-a na Windowsu i Linuxu.
+
+\subsection{Windows}
+
+Na ovom operativnom sistemu postoje 3 načina za instalaciju F\#-a i to su: Visual studio\cite{vStud}, Visual Studio Code \cite{vStudCode} i JetBrains Rider \cite{jetBrains}.
+
+\subsubsection{Visual studio}
+	
+Na Windows operativnim sistemima se uglavnom koristi Visual Studio alat.Visual studio 2017 je alat koji dolazi sa podrškom za F\# u svim verzijama: Professional, Enterprise i Community (verzija je potpuno besplatna). 
+	Medjutim ukoliko imate  već instaliran Visual Studio 2012/13/15  Professional ili above možete ga takodje koristiti zato što i on podržava alate za F\# iako nije toliko napredan kao Visual Studio 2017.
+
+\subsubsection{Visual Studio Code}
+	
+Visual Studio Code je besplatna platforma koja podržava mnogo jezika pa i F\# . On je podržan od strane Ionide\cite{ionide}.
+
+1.korak: Instalirati Visual studio Code za Windows
+
+2.korak: pritisnuti Ctrl+Shift+p i sledeću naredbu za instalaciju Ionide paketa za Visual Strudio Code.
+\\
+\begin{lstlisting}
+ ext install Ionide-fsharp
+\end{lstlisting}
+ 
+\subsubsection{JetBrains Rider}
+
+JetBrains Rider je platforma .NET IDE izgradjena je pomoću InteliJ i  ReSharper tehnologije. JetBrains nudi podršku .NET i .NET Core aplikacijama na svim platformama.
+
+1.korak: Instalirati JetBrains za Windows
+
+2.korak(opciono): instalirati poslednju .NED Core SDK
+
+Takodje vam je potrebno da instalirate ceo Visual Studio ili F\# kompajler.
+
+
+\subsection{Linux}
+
+Instalacija F\# na Linuxu se izvršava na potpuno identičan način za Ubuntu, Mint i Debian verziju.
+
+\subsubsection{Ubuntu/Mint/Debian}
+
+1.korak: Dodajte Mono\cite{mono} repozitorijum vašem menadžeru paketa
+
+2.korak: Instalirati F\# koji ce istovremeno povući novu verziju Mono-a ukoliko je to potrebno.
+\\
+\begin{lstlisting}
+sudo apt-get update
+sudo apt-get install fsharp
+\end{lstlisting}
+ 
 
 \section{Zaključak}
 \label{sec:zakljucak}
