--- a/seminarski.bib
+++ b/seminarski.bib
@@ -35,3 +35,54 @@ note = {on-line at: \url{https://fsharp.org/specs/language-spec/}},
 author = {{F\# Software Foundation and individual contributors}},
 year = {2012-2018}
 }
+
+@misc{vStud,
+title = {{Visual Studio}},
+note = {on-line at: \url{https://visualstudio.microsoft.com/}},
+author = {{Microsoft}},
+year = {2019}
+}
+
+@misc{fwFs,
+title = {{List of frameworks}},
+note = {on-line at: \url{https://fsharp.org/guides/web/}},
+author = {{F\# Software Foundation and individual contributors}},
+year = {2012-2018}
+}
+
+@misc{jetBrains,
+title = {{Jet Brains rider}},
+note = {on-line at: \url{https://www.jetbrains.com/rider/}},
+author = {{ JetBrains s.r.o. Developed with drive and IntelliJ IDEA}},
+year = {2000-2019}
+}
+
+@misc{vStudCode,
+title = {{Visual Studio Code}},
+note = {on-line at: \url{https://code.visualstudio.com/}},
+author = {{Microsoft}},
+year = {2019}
+}
+
+@misc{mono,
+title = {{Mono}},
+note = {on-line at: \url{https://www.mono-project.com/}},
+author = {{Mono Project}},
+year = {2019}
+}
+
+@misc{ionide,
+title = {{Ionide}},
+note = {on-line at: \url{http://ionide.io/}},
+%author = {{Microsoft}},
+%year = {2019}
+}
+
+@book{progFs,
+ author = {Chris, Smith},
+ title = {Programing F\#},
+ year = {2009},
+ isbn = {978-0-596-15364-9},
+ publisher = {O’Reilly Media},
+ address = {1005 Gravenstein Highway North},
+}
