--- a/3_Programski_jezik_F#_Todorov_Garibovic_Nedeljkovic_Vicentijevic.tex
+++ b/3_Programski_jezik_F#_Todorov_Garibovic_Nedeljkovic_Vicentijevic.tex
@@ -53,7 +53,7 @@
 
 \title{Programski jezik F\#\\ \small{Seminarski rad u okviru kursa\\Metodologija stručnog i naučnog rada\\ Matematički fakultet}}
 
-\author{Tijana Todorov, Tamara Garibović,\\ David Nedeljković, Mihajlo Vicentijević \\ tijana.todorov710@gmail.com, t.garibovic1995@gmail.com, \\ dnedeljkovic710@gmail.com, mihajlovicent@gmail.com}
+\author{Tijana Todorov, Tamara Garibović,\\ David Nedeljković, Mihajlo Vićentijević \\ tijana.todorov710@gmail.com, t.garibovic1995@gmail.com, \\ dnedeljkovic710@gmail.com, mihajlovicent@gmail.com}
 
 %\date{9.~april 2015.}
 
@@ -174,7 +174,7 @@ JetBrains Rider je platforma .NET IDE izgrađena je pomoću InteliJ i  ReSharper
 Takođe vam je potrebno da instalirate ceo Visual Studio ili F\# kompajler.
 
 
-\subsection{Linux}
+\subsection{Uputstvo za Linux}
 
 Instalacija F\# na Linuxu se izvršava na potpuno identičan način za Ubuntu, Mint i Debian verziju.
 
