Osobine jezika,Asinhrona i paralelna paradigma

--- a/seminarski.bib
+++ b/seminarski.bib
@@ -43,6 +43,13 @@ author = {{Microsoft}},
 year = {2019}
 }
 
+@misc{sysCC,
+title = {{System.Collections.Concurrent}},
+note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/api/system.collections?view=netframework-4.7.2}},
+author = {{Microsoft}},
+year = {2019}
+}
+
 @misc{fwFs,
 title = {{List of frameworks}},
 note = {on-line at: \url{https://fsharp.org/guides/web/}},
@@ -71,11 +78,32 @@ author = {{Mono Project}},
 year = {2019}
 }
 
-@misc{ionide,
-title = {{Ionide}},
-note = {on-line at: \url{http://ionide.io/}},
-%author = {{Microsoft}},
-%year = {2019}
+@book{workFlow,
+ author = {Chris, Smith},
+ title = {Programing F\#, Asynchronous Workflows str.268},
+ year = {2009},
+ isbn = {978-0-596-15364-9},
+ publisher = {O’Reilly Media},
+ address = {1005 Gravenstein Highway North},
+}
+
+
+@book{theAL,
+ author = {Chris, Smith},
+ title = {Programing F\#, The Async Library str.269},
+ year = {2009},
+ isbn = {978-0-596-15364-9},
+ publisher = {O’Reilly Media},
+ address = {1005 Gravenstein Highway North},
+}
+
+@book{progFsPM,
+ author = {Chris, Smith},
+ title = {Programing F\#, Patern matching str.62},
+ year = {2009},
+ isbn = {978-0-596-15364-9},
+ publisher = {O’Reilly Media},
+ address = {1005 Gravenstein Highway North},
 }
 
 @book{progFs,
@@ -85,4 +113,11 @@ note = {on-line at: \url{http://ionide.io/}},
  isbn = {978-0-596-15364-9},
  publisher = {O’Reilly Media},
  address = {1005 Gravenstein Highway North},
+}
+
+@misc{ionide,
+title = {{Ionide}},
+note = {on-line at: \url{http://ionide.io/}},
+%author = {{Microsoft}},
+%year = {2019}
 }
