Ismenjene neke sitnice u tekstu i dodate reference

--- a/seminarski.bib
+++ b/seminarski.bib
@@ -23,6 +23,15 @@ author = {Microsoft}
 year = {2019}
 }
 
+
+@misc{microsoft_c},
+title = {{C\# Guide}},
+note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/csharp/index}},
+author = {Microsoft}
+year = {2019}
+}
+
+
 @misc{early_history,
 title = {{The Early History of F\#}},
 note = {on-line at: \url{https://fsharp.org/history/hopl-draft-1.pdf}},
@@ -97,14 +106,15 @@ year = {2019}
  address = {1005 Gravenstein Highway North},
 }
 
-@book{progFsPM,
- author = {Chris, Smith},
- title = {Programing F\#, Patern matching str.62},
- year = {2009},
- isbn = {978-0-596-15364-9},
- publisher = {O’Reilly Media},
- address = {1005 Gravenstein Highway North},
+@book{expertFS,
+ author = {Don Syme, Adam Granicz, Antonio Cisternino},
+ title = {Expert F\#},
+ year = {2007},
+ isbn = {978-1-59059-850-4, 1-59059-850-4},
+ publisher = {Kinetic Publishing Services, LLC},
+ address = {New York, NY 10013.},
 }
+
 
 @book{progFs,
  author = {Chris, Smith},
@@ -120,4 +130,13 @@ title = {{Ionide}},
 note = {on-line at: \url{http://ionide.io/}},
 %author = {{Microsoft}},
 %year = {2019}
+}
+
+@book{progFsPFX,
+ author = {Chris, Smith},
+ title = {Programing F\#, PFX str.276},
+ year = {2009},
+ isbn = {978-0-596-15364-9},
+ publisher = {O’Reilly Media},
+ address = {1005 Gravenstein Highway North},
 }
